--- a/paper/dali.tex
+++ b/paper/dali.tex
@@ -338,6 +338,9 @@ morekeywords={module, match, when, @@deriving, not, : , /\\}
 \input{evaluation}
 
 \input{related}
+
+\input{conc}
+
 %% Acknowledgments
 % \begin{acks}                            %% acks environment is optional
 %                                         %% contents suppressed with 'anonymous'
