--- a/paper/all.bib
+++ b/paper/all.bib
@@ -1184,3 +1184,21 @@ url="http://dx.doi.org/10.1007/3-540-56596-5_47"
 	publisher = {ACM},
 	address = {New York, NY, USA},
 }
+@inproceedings{Orleans,
+	author = {Bykov, Sergey and Geller, Alan and Kliot, Gabriel and Larus, James R. and Pandya, Ravi and Thelin, Jorgen},
+	title = {Orleans: Cloud Computing for Everyone},
+	booktitle = {Proceedings of the 2Nd ACM Symposium on Cloud Computing},
+	series = {SOCC '11},
+	year = {2011},
+	isbn = {978-1-4503-0976-9},
+	location = {Cascais, Portugal},
+	pages = {16:1--16:14},
+	articleno = {16},
+	numpages = {14},
+	url = {http://doi.acm.org/10.1145/2038916.2038932},
+	doi = {10.1145/2038916.2038932},
+	acmid = {2038932},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {cloud computing, distributed actors, programming models},
+}
