--- a/paper/related.tex
+++ b/paper/related.tex
@@ -35,18 +35,17 @@ using well-understood state (heap)-based abstractions to build
 distributed applications greatly simplifies program reasoning and
 eases development, without compromising efficiency.
 
-Modern distributed systems are often equipped with only parsimonious
-data models (e.g., key-value model) and poorly understood low-level
-consistency guarantees\footnote{Cassandra~\cite{Cassandra}, a popular
-  NoSQL data store, comes with various consistency enforcement
-  mechanisms, such as anti-entropy protocols, {\sc QUORUM} and {\sc
-    LOCAL\_QUORUM} reads and writes, and light-weight transactions,
-  each of which can be controlled via configuration knobs or runtime
-  parameters.}  that complicate program reasoning, and make it hard to
-enforce application integrity. Some authors~\cite{bailis-bolton} have
-demonstrated that it is possible to\emph{bolt on} high-level
-consistency guarantees (e.g., causal consistency)~\cite{COPS,BEG+17}
-as a \emph{shim layer} service over existing stores.
+Modern distributed systems are often equipped with only parsimonious data
+models (e.g., key-value model) and poorly understood low-level consistency
+guarantees\footnote{Cassandra~\cite{Cassandra}, a popular NoSQL data store,
+comes with various consistency enforcement mechanisms, such as anti-entropy
+protocols, {\sc QUORUM} and {\sc LOCAL\_QUORUM} reads and writes, and
+light-weight transactions, each of which can be controlled via configuration
+knobs or runtime parameters.}  that complicate program reasoning, and make it
+hard to enforce application integrity. Some authors~\cite{bailis-bolton} have
+demonstrated that it is possible to\emph{bolt on} high-level consistency
+guarantees (e.g., causal consistency)~\cite{COPS,BEG+17} as a \emph{shim layer}
+service over existing stores.
 
 A number of verification techniques, programming abstractions, and
 tools have been proposed to reason about program behavior in a
@@ -95,36 +94,52 @@ of system- or architecture-specific details.  This reasoning phase
 implicitly expresses salient semantic invariants without having to be
 exposed to low-level operational details.
 
-There have been numerous proposals over the years for realizing
-distributed functionality in a functional programming context.
-Poly/ML~\cite{Mat97} and Facile~\cite{TLK+93} extend Standard ML,
-while Acute~\cite{SLW+05} and HashCaml~\cite{BSS+06} extend OCaml, with
-distributed programming abstractions and support, with particular
-focus on type-safe marshalling and mobility.  Kali-Scheme~\cite{CJK95}
-defines a distributed extension for Scheme-48, and Cloud
-Haskell~\cite{EBPJ11} describes a domain-specific language that
-enables development of distributed Haskell programs.
-Obliq~\cite{Car95} explores issues related to mobility, lexical
-scoping, and network references in an object-oriented framework that
-enables safe (i.e., lexical) transmission of closures.  However,
-unlike \name, none of these systems consider issues of object
-replication or consistency as central to their programming models.
-The realities of modern-day scalable distributed systems, especially
-those that are constructed from geographically distributed
-participants, dictate that we must necessarily grapple with
-consistency issues to achieve any kind of reasonable performance; it
-is noteworthy that replication is inherent in many widely-used
+There have been numerous proposals over the years for realizing distributed
+functionality in a functional programming context. Poly/ML~\cite{Mat97} and
+Facile~\cite{TLK+93} extend Standard ML, while Acute~\cite{SLW+05} and
+HashCaml~\cite{BSS+06} extend OCaml, with distributed programming abstractions
+and support, with particular focus on type-safe marshalling and mobility.
+Kali-Scheme~\cite{CJK95} defines a distributed extension for Scheme-48, and
+Cloud Haskell~\cite{EBPJ11} describes a domain-specific language that enables
+development of distributed Haskell programs. Obliq~\cite{Car95} explores issues
+related to mobility, lexical scoping, and network references in an
+object-oriented framework that enables safe (i.e., lexical) transmission of
+closures. Orleans~\cite{Orleans} provides persistent actor-based programming
+model for elastic cloud application, but the focus is on strong consistency,
+mirroring a single-threaded execution.
+
+However, unlike \name, none of these systems consider issues of object
+replication or consistency as central to their programming models. The
+realities of modern-day scalable distributed systems, especially those that are
+constructed from geographically distributed participants, dictate that we must
+necessarily grapple with consistency issues to achieve any kind of reasonable
+performance; it is noteworthy that replication is inherent in many widely-used
 cloud-based distributed system implementations today (e.g.,
-Cassandra~\cite{Cassandra} or Dynamo~\cite{Dynamo}), which provide
-only weak consistency guarantees.  Rather than exposing a low-level
-operational treatment of replication, foisting the burden of reasoning
-about replicated state onto the programmer, our primary contribution
-is the development of a principled high-level approach to framing
-these issues that abstracts these kinds of system-level details.  Our
-goal is to leverage functional programming principles to minimize
-disruption to the way programmers structure and reason about their
-applications, without compromising efficiency or performance.  Indeed,
-the semantics of mergeable types and versioning has utility in any
+Cassandra~\cite{Cassandra} or Dynamo~\cite{Dynamo}), which provide only weak
+consistency guarantees.  Rather than exposing a low-level operational treatment
+of replication, foisting the burden of reasoning about replicated state onto
+the programmer, our primary contribution is the development of a principled
+high-level approach to framing these issues that abstracts these kinds of
+system-level details.  Our goal is to leverage functional programming
+principles to minimize disruption to the way programmers structure and reason
+about their applications, without compromising efficiency or performance.
+Indeed, the semantics of mergeable types and versioning has utility in any
 concurrent setting that must deal with non-trivial coordination and
-synchronization costs, even without taking distribution or replication
-issues into account.
+synchronization costs, even without taking distribution or replication issues
+into account.
+
+\name shares resemblance to conflict-free replicated data types
+(CRDT)~\cite{crdt}. CRDTs define abstract data types such as counters, sets,
+etc., with commutative operations such that the state of the data type always
+converges. Unlike CRDTs, the operations on mergeable types in \name need not
+commute and the reconciliation protocol is defined by user-defined merge
+functions. Moreover, CRDTs are not composable and each CRDT tends to be built
+from scratch over the network protocol. Compare to this, \name types are
+composable; mergeable ropes are polymorphic over its mergeable content. \name
+uses 3-way merges using the lowest common ancestor, which is critical for all
+of our user-defined merges. However, CRDTs do not have the benefit of lowest
+common ancestor for merges and are only presented with the two concurrent
+versions. If a 3-way merge is desired, then the causal history has to be
+explicitly encoded in the data type. As a result, constructing even simple data
+types like counters are more complicated using CRDTs~\cite{crdt} compared to
+their implementation in \name.
