--- a/paper/dali.tex
+++ b/paper/dali.tex
@@ -364,7 +364,7 @@ morekeywords={module, match, when, @@deriving, not, : , /\\}
 
 
 %% Appendix
-\appendix
-\input{appendix}
+%\appendix
+%\input{appendix}
 
 \end{document}
