--- a/paper/all.bib
+++ b/paper/all.bib
@@ -1184,3 +1184,9 @@ url="http://dx.doi.org/10.1007/3-540-56596-5_47"
 	publisher = {ACM},
 	address = {New York, NY, USA},
 }
+
+@inproceedings(implicits,
+  key = {White},
+  title = {{Modular Implicits}},
+  booktitle = {{ML Workshop}},
+  year = 2014)
