--- a/paper/model.tex
+++ b/paper/model.tex
@@ -67,7 +67,7 @@ by different clients.
 
 \name requires a three-way \C{merge} function to merge concurrent
 versions of a drawing canvas (see Fig.~\ref{fig:merge-canvas}) that
-includes includes two concurrent versions (\C{v1} and \C{v2}),
+includes two concurrent versions (\C{v1} and \C{v2}),
 and their lowest common ancestor (\C{lca}) - the version from which the
 two concurrent versions evolved independently. The merge function can
 make use of the pixel values of the common ancestor to merge the pixel
