--- a/paper/mergeable-types.tex
+++ b/paper/mergeable-types.tex
@@ -102,7 +102,7 @@ locally, or by merging from the remote branches. In the latter case,
 Def.~\ref{def:mergeable-type} guarantees that the existence of a
 morphism from the merging value to the merged value.
 
-\noindent Rather than specifying merge ($M$) in terms of an LCA as we
+Rather than specifying merge ($M$) in terms of an LCA as we
 did in describing our programming model,
 Def.~\ref{def:mergeable-type} specifies $M$ in terms of a pair
 of morphisms.  This specification is useful to avoid the expression of
