--- a/paper/implementation.tex
+++ b/paper/implementation.tex
@@ -1,7 +1,8 @@
 \section{Distributed Instantiation}
 \label{sec:implementation}
 
-We describe the realization of \name on top of a persistent
+We describe the
+realization\footnote{\url{https://github.com/icfp2017/vml}} of \name on top of a persistent
 distributed store and the language extensions to enable and enforce
 the constraints of the \name.
 
@@ -75,7 +76,7 @@ representational mismatch with the help of OCaml's PPX metaprogramming
 support~\cite{ppx} to derive bi-directional transformations between
 objects on OCaml and Irmin heaps. We also derive the various
 serialization functions required by Irmin\footnote{
-  Since the \nameMonad monad relies on Irmin for realizing the branch
+  The Since \nameMonad monad relies on Irmin for realizing the branch
   structure, it is in fact parameterized over a mergeable type that
   implements all these functions. Thus the monad is functorized over
   the mergeable type, but not polymorphic. The convenience of type
