--- a/paper/evaluation.tex
+++ b/paper/evaluation.tex
@@ -34,7 +34,7 @@ random indices with 85\% insertions and 15\% deletions.
 	\begin{subfigure}{0.45\textwidth}
 		\includegraphics[width=0.9\textwidth]{Figures/cluster.pdf}
 		\caption{Our experimental configuration consists of an 8-node ring cluster
-			on executing on a Google Cloud Platform. US-C, EU-W, ASIA-NE and ASIA-E
+			executing on Google Cloud Platform. US-C, EU-W, ASIA-NE and ASIA-E
 			are availability zones us-central1-b, europe-west1-b, asia-northeast1-b
 			and asia-east1-b respectively. Edge labels are inter-node latencies in
 		milliseconds.}
