--- a/paper/implementation.tex
+++ b/paper/implementation.tex
@@ -81,7 +81,7 @@ serialization functions required by Irmin\footnote{
   implements all these functions. Thus the monad is functorized over
   the mergeable type, but not polymorphic. The convenience of type
   parameter inference that polymorphism offers can however be obtained
-  for module parameters using OCaml extensioms, such as Modular
+  for module parameters using OCaml extensions, such as Modular
   Implicits~\cite{implicits}.
 }.
 Synchronization between replicas is performed using Git's notion of
