--- a/paper/examples.tex
+++ b/paper/examples.tex
@@ -108,7 +108,7 @@ implemented in less than 50 lines of OCaml.  The functions are described below.
 		that map a list $v$ to two different lists, $v_1$ and $v_2$ (e.g.,
 		Fig.~\ref{fig:list-eg}), and transforms $s_1$ to $s_1'$ such that $s_1'$
 		has the same effect on $v_2$ as $s_1$ had on $v$.  For instance, in
-		Fig.~\ref{list-eg}, let $s_1$ be the edit sequence \C{[D(1); S(1,c,d)]},
+		Fig.~\ref{fig:list-eg}, let $s_1$ be the edit sequence \C{[D(1); S(1,c,d)]},
 		which maps the list \C{[a;b;c]} ($v$) to \C{[a;d]} ($v_1$). The \C{D} edit
 		deletes the first element of $v$. However, if $s_1$ is to be applied on the
 		list \C{[c;a;b;s]} ($v_2$), which has a new element at position 0, the
